remove the special java version handling in the startup script as that stops the UI being used from other code and instead add javax.activation as a standard dependency